# omnigent-agents

./: .gitignore  AGENTS.md  README.md
bottega/: README.md  config.yaml
bottega/agents/architect/: config.yaml
bottega/agents/bootstrapper/: config.yaml
bottega/agents/coder/: config.yaml
bottega/agents/refactorer/: config.yaml
bottega/agents/specifier/: config.yaml
bottega/examples/aps-equivalent-mutants/: README.md  equivalent-mutants.json  run.sh
bottega/examples/aps-step-isolation/: .gitignore  README.md  run.sh
bottega/examples/py-sample/: .gitignore  README.md  pyproject.toml
bottega/examples/ts-sample/: .gitignore  README.md  package.json  tsconfig.json
bottega/skills/architect-verify/: SKILL.md
bottega/skills/bootstrap-aps/: SKILL.md
bottega/skills/fanout/: SKILL.md
bottega/skills/integrate-wave/: SKILL.md
bottega/skills/investigate/: SKILL.md
bottega/skills/pr-assemble/: SKILL.md
bottega/skills/registry-state/: SKILL.md
bottega/skills/run-slice-pipeline/: SKILL.md
concordia/: README.md  config.yaml
docs/plans/: 2026-06-16-concordia-fusion-draco-architecture.md  2026-06-16-polly-agentic-code-review-improvements.md
docs/research/: 2026-06-15-openrouter-fusion.md
duetta/: README.md  config.yaml
maestro/: README.md  config.yaml
maestro/solutions/: README.md
moe-panel/: README.md  config.yaml
swarmforge/: README.md  config.yaml
swarmforge/examples/py-sample/: .gitignore  README.md  pyproject.toml
swarmforge/examples/py-sample/src/tinycalc/: __init__.py
swarmforge/examples/py-sample/tests/: test_tinycalc.py
(+53 files in other folders)
